@@ -1,14 +1,17 @@
 package ro.siit.LottoApp.service;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import ro.siit.LottoApp.entity.Player;
 import ro.siit.LottoApp.repository.PlayerRepository;
+import ro.siit.LottoApp.service.model.CustomUserDetails;
 
 import java.util.Collections;
+import java.util.Set;
 
 @Service
 public class PlayerSecurityService implements UserDetailsService {
@@ -22,8 +25,8 @@ public class PlayerSecurityService implements UserDetailsService {
         if(player == null) {
             throw new UsernameNotFoundException(name);
         }
-        return new org.springframework.security.core.userdetails.User(player.getName(),
+        return new CustomUserDetails(player.getId(), player.getName(),
                 player.getPassword(),
-                Collections.emptySet());
+                Set.of(new SimpleGrantedAuthority(player.getRole())));
     }
 }
